@@ -77,8 +77,11 @@ hockeypuck (0.9~rc2) precise; urgency=low
     instroot/var/lib/hockeypuck/www/templates/pks/stats.tmpl:
     - Change op=status to op=stats. Make distinction between "status" and "stats"
       elsewhere in the codebase while we're at it.
+  * responses.go, server.go:
+    - Default op=stats HTTP port to 11371, improve Host: parsing.
+    - Respond with JSON for mr option if op=stats.
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 26 Feb 2013 17:17:32 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 27 Feb 2013 18:10:28 -0600
 
 hockeypuck (0.8.1) precise; urgency=low
 
